# khoca

./: Dockerfile  Makefile  README.md  __init__.py  before-build.sh  khoca.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  build_wheels_linux.yml  build_wheels_macos.yml  build_wheels_windows.yml  run_tests.yml  upload_pypi.yml  windows.yml
docker/: Dockerfile
src/krasner/: krasner.h
src/planar_algebra/: coefficient_rings.h  planar_algebra.h
src/python_interface/: pui.pyx  pythonInterface.cpp
