[build-system]
requires = [
    "cython",
    "setuptools",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"
[tool.cibuildwheel]
build = ["cp38-manylinux_x86_64", "cp39-manylinux_x86_64", "cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64"]
environment = {CC="g++"}
before-all = "yum -q update && yum -q -y install gmp-devel && sh .install-pari.sh"
