[build-system]
requires = [
    "cython",
    "setuptools",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp3*"]
archs = ["x86_64"]
environment = {CC="g++"}
before-all = "yum -q update && yum -q -y install gmp-devel && sh .install-pari.sh"
test-requires = ["py", "pytest"]
test-command = "cd /project && pytest && cd .."

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add gmp-dev && sh .install-pari.sh"
